add PYTHIA Experts event weight

--- a/s-channel_ckkwl-v2/Analysis/Check_LHE_event_weight.ipynb
+++ b/s-channel_ckkwl-v2/Analysis/Check_LHE_event_weight.ipynb
@@ -105,8 +105,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<pylhe.LHEEvent object at 0x7f961c44b280>\n",
-      "<pylhe.LHEEvent object at 0x7f94c2e23700>\n"
+      "<pylhe.LHEEvent object at 0x7f7008a59910>\n",
+      "<pylhe.LHEEvent object at 0x7f7008a598e0>\n"
      ]
     }
    ],
@@ -191,23 +191,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(event_lhe[1].weights)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "None\n",
       "None\n",
       "None\n",
@@ -252,14 +235,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<pylhe.LHEEventInfo object at 0x7f94c2e23790>\n",
+      "<pylhe.LHEEventInfo object at 0x7f7008a59940>\n",
       "['__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__', 'aqcd', 'aqed', 'fieldnames', 'fromstring', 'nparticles', 'pid', 'scale', 'weight']\n"
      ]
     }
@@ -271,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -292,19 +275,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Alan's example"
+    "#### 1. Alan's example"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "10000it [00:05, 1907.60it/s]\n"
+      "10000it [00:06, 1578.61it/s]\n"
      ]
     }
    ],
@@ -322,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +315,7 @@
        "       1.1548845])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +338,7 @@
        "        8846]),)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +358,7 @@
        "-1.1548845"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,12 +371,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### By myself"
+    "#### 2. By myself"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -413,14 +396,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "10000it [00:05, 1896.69it/s]\n"
+      "10000it [00:05, 1789.99it/s]\n"
      ]
     }
    ],
@@ -435,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,51 +429,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "0it [00:00, ?it/s]\n"
+      "10000it [00:05, 1714.92it/s]\n"
      ]
     }
    ],
    "source": [
-    "aaa = []\n",
+    "ccc = []\n",
     "for i, event in enumerate(tqdm.tqdm(svj)):\n",
-    "    aaa.append(event.eventinfo.weight)\n",
+    "    ccc.append(event.eventinfo.weight)\n",
     "    \n",
-    "aaa = np.array(aaa)"
+    "ccc = np.array(ccc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Conclusion: It is wierd, it needs to re-read the path."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<generator object readLHE at 0x7f94c2b51660>"
+       "<generator object readLHE at 0x7f7008786d60>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,16 +477,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<generator object readLHE at 0x7f94a5c57270>"
+       "<generator object readLHE at 0x7f70087866d0>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,14 +497,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "10000it [00:06, 1645.53it/s]\n"
+      "10000it [00:05, 1675.15it/s]\n"
      ]
     }
    ],
@@ -546,34 +522,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.0"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n",
+      "0.0\n"
+     ]
     }
    ],
    "source": [
-    "np.sum(aaa - bbb)"
+    "print(np.sum(aaa - bbb))\n",
+    "print(np.sum(aaa - ccc))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Conclusion: ???"
+    "#### Conclusion: It is very strange."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +626,7 @@
        "        8846]),)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -717,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1009,21 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1044,29 +1005,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### How to know these events are reasonable?"
+    "#### +----+ How to know these events are reasonable? +----+"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1077,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1090,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -1470,7 +1410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -1879,7 +1819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1910,7 +1850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1921,7 +1861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1942,7 +1882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1951,7 +1891,7 @@
        "array([1.1548846e-13], dtype=float32)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1962,7 +1902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1971,7 +1911,7 @@
        "array([1.1548845], dtype=float32)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1982,7 +1922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2015,7 +1955,7 @@
        "       1.2213006, 1.105263 , 1.1409763], dtype=float32)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2026,7 +1966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -2062,13 +2002,13 @@
    ],
    "source": [
     "for i in range(len(weight_weight)):\n",
-    "    if weight_weight[i][0] < 0:\n",
+    "    if weight_weight[i][0] <= 0:\n",
     "        print(i, weight_weight[i], weight_weight[i]*(10**9))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -2114,13 +2054,13 @@
    ],
    "source": [
     "for i in range(len(weight_event_lhe)):\n",
-    "    if weight_event_lhe[i][0] < 0:\n",
+    "    if weight_event_lhe[i][0] <= 0:\n",
     "        print(i, weight_event_lhe[i])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -2310,7 +2250,7 @@
    "source": [
     "for i in range(350):\n",
     "    for j in range(len(weight_weight_lhe[i])):\n",
-    "        if weight_weight_lhe[i][j] < 0:\n",
+    "        if weight_weight_lhe[i][j] <= 0:\n",
     "            print(i, j, weight_weight_lhe[i][j])"
    ]
   },
